[package]
authors = ["Yukimasa Funaoka <yukimasafunaoka@gmail.com>"]
name = "read_image_napi"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/mochiya98/rs-read-image"

[lib]
crate-type = ["cdylib","rlib"]

[profile.release]
lto = true

[dependencies]
napi = { version = "1", features = ["napi4", "serde-json"] }
napi-derive = "1"
read_image_lib = { path = "../lib" }

[build-dependencies]
napi-build = { version = "1" }
