[package]
authors = ["Yukimasa Funaoka <yukimasafunaoka@gmail.com>"]
name = "read_image_wasm"
version = "0.1.0"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/mochiya98/rs-read-image"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
console_error_panic_hook = "0.1.6"
read_image_lib = { path = "../lib" }
wasm-bindgen = "0.2.74"

[dev-dependencies]
image = "0.23.14"
wasm-bindgen-test = "0.3.24"